background image on mobile bug fixed

--- a/src/styles/Register.module.css
+++ b/src/styles/Register.module.css
@@ -1,7 +1,5 @@
 .register{
   background-image: url('../assets/Images/artistic-blurry-colorful-wallpaper-background.jpg');
-  /* background: linear-gradient(#66009D, #000B77, #00042E); */
-  /* background: linear-gradient(180deg, rgba(102,0,157,1) 5%, rgba(0,11,119,1) 80%, rgba(0,4,46,1) 100%); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -102,6 +100,9 @@ input:focus{
   padding-top: 5px;
 }
 @media screen and (max-width: 480px) {
+  .register{
+    height: 100vh;
+  }
   .form2{
     width: 65vw;
     height: 60vh;
